--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,11 @@ readme = "README.md"
 python = "^3.12"
 websockets = "12.0"
 faststream = "0.4.7"
-streamlit = "1.32.2"
 pydantic = "2.6.4"
 pydantic-settings = "2.2.1"
 confluent-kafka = "2.3.0"
+
+[tool.poetry.dev-dependencies]
 faker = "^24.4.0"
 
 
